Update a lot of configs.

--- a/_config/Trolltech.conf
+++ b/_config/Trolltech.conf
@@ -19,6 +19,12 @@ usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqmng.so=40802, 0, x86_64 li
 usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqsvg.so=40802, 0, x86_64 linux g++-4 full-config, 2012-08-27T23:41:13
 usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=40802, 0, x86_64 linux g++-4 full-config, 2012-08-27T23:41:06
 usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=40802, 0, x86_64 linux g++-4 full-config, 2012-08-27T23:41:06
+usr\lib\kde4\okularpart.so=40802, 0, x86_64 linux g++-4 full-config, 2012-06-20T19:43:39
+usr\lib\kde4\okularGenerator_poppler.so=40802, 0, x86_64 linux g++-4 full-config, 2012-06-20T19:43:39
+usr\lib\x86_64-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=40802, 0, x86_64 linux g++-4 full-config, 2012-08-27T23:41:13
+usr\lib\kde4\kded_phononserver.so=40802, 0, x86_64 linux g++-4 full-config, 2012-10-24T22:49:41
+usr\lib\kde4\plugins\phonon_platform\kde.so=40802, 0, x86_64 linux g++-4 full-config, 2012-10-24T22:49:42
+usr\lib\qt4\plugins\phonon_backend\phonon_vlc.so=40802, 1, x86_64 linux g++-4 full-config, 2012-08-18T10:54:35
 
 [Qt%20Factory%20Cache%204.8]
 com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=2012-08-27T23:41:07, imsw-multi
@@ -41,6 +47,8 @@ com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqsvg.so=2012-08-27T23:41:13, svg, svgz
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=2012-08-27T23:41:06, tga
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=2012-08-27T23:41:06, tiff, tif
+com.trolltech.Qt.QIconEngineFactoryInterfaceV2%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=2012-08-27T23:41:13, svg, svgz, svg.gz
+com.trolltech.Qt.QIconEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=2012-08-27T23:41:13
 
 [Qt%20Plugin%20Cache%204.6.false]
 usr\lib32\qt4\plugins\inputmethods\libqimsw-multi.so=40603, 0, i386 linux g++-4 full-config, 2011-05-21T18:31:11
