--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,30 @@
-_config/Skype/
-_config/nautilus/
-_config/ristretto/
-_config/software-center/
-_config/sublime-text-2/
-_config/totem/
-_config/xfce4/
-_config/yelp/
-_config/libreoffice/
+_config/alarm-clock/
 _config/chromium/
-_config/gnome-control-center/
-_config/gedit/
-_config/evince/
-_config/eog/
 _config/compiz/
 _config/compiz-1/
+_config/dconf/
+_config/enchant/
+_config/eog/
+_config/epdfview/
+_config/evince/
+_config/gedit/
+_config/gigolo/
+_config/gnome-control-center/
+_config/gtk-2.0/
+_config/libreoffice/
+_config/nautilus/
+_config/orage/
+_config/ristretto/
+_config/Skype/
+_config/softwarecenter/
+_config/squeeze/
+_config/sublime-text-2/
+_config/totem/
 _config/Trolltech.conf
-.redcar/
+_config/xfce4/
+_config/xfce4-dict/
+_config/yelp/
 dotfiles.sublime-project
 dotfiles.sublime-workspace
-_config/dconf/
+.redcar/
+
