Update last configs.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,19 @@ _config/Trolltech.conf
 _config/xfce4/
 _config/xfce4-dict/
 _config/yelp/
+_config/autostart/
+_config/geany/
+_config/leafpad/
+_config/oxygen-gtk/
+_config/Thunar/
+_config/autostart/
+_config/bless/
+_config/geany/
+_config/leafpad/
+_config/menus/
+_config/oxygen-gtk/
+_config/pavucontrol.ini
+_config/software-center/
 dotfiles.sublime-project
 dotfiles.sublime-workspace
 .redcar/
