--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ _config/oxygen-gtk/
 _config/pavucontrol.ini
 _config/software-center/
 _config/Terminal/
+_config/vlc/
 dotfiles.sublime-project
 dotfiles.sublime-workspace
 .redcar/
