Ignore everythinhg in _config.

--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,1 @@
-_config/alarm-clock/
-_config/chromium/
-_config/compiz/
-_config/compiz-1/
-_config/dconf/
-_config/enchant/
-_config/eog/
-_config/epdfview/
-_config/evince/
-_config/gedit/
-_config/gigolo/
-_config/gnome-control-center/
-_config/gtk-2.0/
-_config/libreoffice/
-_config/nautilus/
-_config/orage/
-_config/ristretto/
-_config/Skype/
-_config/softwarecenter/
-_config/squeeze/
-_config/sublime-text-2/
-_config/totem/
-_config/Trolltech.conf
-_config/xfce4/
-_config/xfce4-dict/
-_config/yelp/
-_config/autostart/
-_config/geany/
-_config/leafpad/
-_config/oxygen-gtk/
-_config/Thunar/
-_config/autostart/
-_config/bless/
-_config/geany/
-_config/leafpad/
-_config/menus/
-_config/oxygen-gtk/
-_config/pavucontrol.ini
-_config/software-center/
-_config/Terminal/
-_config/vlc/
-_config/ReText project/
-_config/htop/
-_config/keepassx/
-dotfiles.sublime-project
-dotfiles.sublime-workspace
-.redcar/
-
+src/_config/
