--- a/src/_tmux.conf
+++ b/src/_tmux.conf
@@ -3,6 +3,14 @@ set-option -g history-limit 50000
 
 bind-key C-b last-window
 
+set -g default-terminal "xterm-256color"
+
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
+#set-option -g mode-mouse on
+
+#set-window-option -g utf8 on
+
 #### COLOUR (Solarized light)
 
 # default statusbar colors
@@ -13,12 +21,12 @@ set-option -g status-attr default
 # default window title colors
 set-window-option -g window-status-fg brightyellow #base00
 set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-attr dim
 
 # active window title colors
 set-window-option -g window-status-current-fg brightred #orange
 set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg white #base2
