Fiz backspace errors.

--- a/src/_tmux.conf
+++ b/src/_tmux.conf
@@ -3,7 +3,9 @@ set-option -g history-limit 50000
 
 bind-key C-b last-window
 
-set -g default-terminal "xterm-256color"
+# Fix backspacxe issue.
+# https://github.com/sorin-ionescu/prezto/issues/61
+set -g default-terminal "screen-256color-bce"
 
 #set-option -g mouse-select-pane on
 #set-option -g mouse-select-window on
